--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node src/server.js"
+    "start": "nodemon node src/introduction/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MinooTavakoli/backend-nodejs#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
 }
