--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon node src/introduction/index.js",
     "match": "nodemon node src/introduction/matched-route.js",
-    "query": "nodemon node src/introduction/query.js"
+    "query": "nodemon node src/introduction/query.js",
+    "body": "nodemon node src/introduction/body.js"
   },
   "repository": {
     "type": "git",
